--- a/Inicio_Club.html
+++ b/Inicio_Club.html
@@ -96,8 +96,15 @@
             background-color: white;
             font: 140%  black;
             font:Arial;
+            
         }
-     
+        p::first-letter {
+            font-size: 400%;
+            font-weight: bold;
+            font-style: italic;
+            color: black
+        }
+
     </style>
 </head>
 
