Subida final de fuentes
Conseguido

--- a/Inicio_Club.html
+++ b/Inicio_Club.html
@@ -8,9 +8,7 @@
     <title>1ºpaginaweb</title>
 
     
-    <style
-    @import url("https://es.ffonts.net/Viking.font.download")
-    >
+    <style>
     @font-face{
         src:url(vikingn.ttf) ;
         font-family: 'vikings';
