--- a/Inicio_Club.html
+++ b/Inicio_Club.html
@@ -18,6 +18,24 @@
             padding: 5px;
             box-sizing: border-box;
         }
+        a:link {
+            color: rgb(9, 0, 128);
+        }
+
+
+        a:visited {
+            color: green;
+        }
+
+
+        a:hover {
+            color: red;
+        }
+
+
+        a:active {
+            color: yellow;
+        }
 
         body {
             background-image:url(fondo.jpg) ;
