--- a/Inicio_Club.html
+++ b/Inicio_Club.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="es"
 >
-   
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Bordes_Colores_Imagenes</title>
+ 
 <head>
     <meta charset="UTF-8">
 
