--- a/Inicio_Club.html
+++ b/Inicio_Club.html
@@ -53,7 +53,7 @@
         h1 {
 
             text-align: center;
-            font: 500% black;
+            font: 350% black;
             font-family: 'Vikings';
             text-decoration: underline rgb(0, 132, 255);
             text-shadow: 10px 10px 10px rgb(255, 255, 255);
@@ -61,7 +61,7 @@
 
         }
 
- 
+
 
 
 
@@ -126,9 +126,9 @@
         p:nth-child(1) {
 
             text-justify: auto;
-            padding-left: 100px;
+            padding-left: 110px;
             padding-right: 100px;
-            font: 140% black;
+            font: 110% black;
             font: Arial;
         }
 
@@ -136,10 +136,9 @@
         p:nth-child(2) {
 
             text-justify: auto;
-            padding-left: 100px;
+            padding-left: 110px;
             padding-right: 100px;
-
-            font: 140% black;
+            font: 110% black;
             font: Arial;
 
         }
@@ -154,7 +153,7 @@
         }
 
         p::first-letter {
-            font-size: 400%;
+            font-size: 200%;
             font-weight: bold;
             font-style: italic;
             color: black
@@ -266,23 +265,29 @@
         .close:hover {
             background: #00d9ff;
         }
-        
-        .contacto p::first-letter{
+
+        .contacto p::first-letter {
             font-size: 100%;
             font-style: italic;
         }
-        #correo::first-letter{
-            color:red;
+
+        #correo::first-letter {
+            color: red;
         }
 
-        #correo :hover::first-letter{
-            color:rgb(255, 255, 255);
+        #correo :hover::first-letter {
+            color: rgb(255, 255, 255);
         }
-        h2{
-            color:white;
+
+        h2 {
+            color: white;
             font-family: 'Vikings';
         }
-
+        i{
+            color: black;
+            font-size: 100%;
+            font-weight: bold;
+        }
     </style>
 </head>
 
@@ -318,10 +323,10 @@
         <div class="contacto">
             <a href="#close" title="Close" class="close">X</a>
             <h2>Drakkars contigo:</h2>
-            <p>Nuestro Correo:</p>
-            <p> malagadrakkarsesports@gmail.com</p>
+            <i>Nuestro Correo:</i>
+            <i> malagadrakkarsesports@gmail.com</i>
             <p id="correo"><a href="mailto:malagadrakkarsesports@gmail.com">
-                    Envianos un correo      </a></p>
+                    Envianos un correo </a></p>
 
         </div>
 </body>
