--- a/Inicio_Club.html
+++ b/Inicio_Club.html
@@ -3,12 +3,10 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Bordes_Colores_Imagenes</title>
+<title>Quienes_Somos</title>
 
 <head>
     <meta charset="UTF-8">
-
-    <title>1ºpaginaweb</title>
 
 
     <style>
@@ -61,30 +59,62 @@
 
         }
 
-
-
-
-
-        #caja1:hover {
-            -webkit-transform: scaleX(-1);
-            transform: scaleX(-1);
+        .flip-box-inner {
+            position: relative;
+            width: 100%;
+            height: 100%;
+            text-align: center;
+            transition: transform 0.8s;
+            transform-style: preserve-3d;
         }
 
-        #caja1 {
-            width: 100pt;
-            height: 100pt;
+
+        .flip-box:hover .flip-box-inner {
+
+            transform: rotateY(180deg);
+
+        }
+
+        .flip-box-front,
+        .flip-box-back {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            -webkit-backface-visibility: hidden;
+            /* Safari */
+            backface-visibility: hidden;
+        }
+
+        .flip-box-front {
+            background-color:  none;
+            color: black;
+        }
+
+        /* Style the back side */
+        .flip-box-back {
+            background-color: none;
+            color: white;
+            transform: rotateY(180deg);
+        }
+
+        .flip-box {
+         
             display: flex;
             object-fit: cover;
             border-radius: 30px 30px 30px 30px;
             box-shadow: 5px 10px 10px rgb(12, 12, 12);
             background-origin: content-box;
-
+            background-color: transparent;
+            width: 130px;
+            height: 130px;
+            border: 1px solid #f1f1f1;
+            perspective: 1000px;
 
         }
 
         img {
-            width: 100pt;
-            height: 100pt;
+            width: 110px;
+            height: 110px;
 
         }
 
@@ -283,18 +313,42 @@
             color: white;
             font-family: 'Vikings';
         }
-        i{
+
+        i {
             color: black;
             font-size: 100%;
             font-weight: bold;
+        }
+
+        b {
+            color: white;
+            font-size: 90%;
+            font-weight: bold;
+            font-family: 'Vikings';
+            text-decoration: underline rgb(0, 132, 255);
+            text-shadow: 10px 10px 10px rgb(255, 255, 255);
         }
     </style>
 </head>
 
 <body>
 
-    <div id="caja1"><img src="logoletras.png" alt="drakkars">
+
+
+    <div class="flip-box">
+        <div class="flip-box-inner">
+            <div class="flip-box-front">
+                <img src="logoletras.png" alt="Drakkars">
+            </div>
+            <div class="flip-box-back">
+                <b>Club Malaga Drakkars Esports</b>
+                
+            </div>
+        </div>
     </div>
+
+
+
     <h1 id="Titulo">Club Malaga Drakkars Esports </h1>
     <div id="contenedor">
         <p>Mi nombre es alejadro lopez gomez, tengo 2 hijos, Alejandro Lopez Salinas de 4 años y Lucia Lopez Salinas de
