--- a/Inicio_Club.html
+++ b/Inicio_Club.html
@@ -312,6 +312,8 @@
         h2 {
             color: white;
             font-family: 'Vikings';
+            font-family: Arial, Helvetica, sans-serif;
+            
         }
 
         i {
@@ -381,6 +383,10 @@
             <i> malagadrakkarsesports@gmail.com</i>
             <p id="correo"><a href="mailto:malagadrakkarsesports@gmail.com">
                     Envianos un correo </a></p>
+
+                    <p><a href="http://malagadrakkars.es/">
+                        http://malagadrakkars.es/  </a></p>
+                         
 
         </div>
 </body>
