--- a/Inicio_Club.html
+++ b/Inicio_Club.html
@@ -173,6 +173,26 @@
 
         }
 
+        p:nth-child(3) {
+
+            text-justify: auto;
+            padding-left: 110px;
+            padding-right: 100px;
+            font: 110% black;
+            font: Arial;
+
+        }
+
+        p:nth-child(4) {
+
+            text-justify: auto;
+            padding-left: 110px;
+            padding-right: 100px;
+            font: 110% black;
+            font: Arial;
+
+        }
+
         #contenedor {
             background-color: rgb(201, 229, 235);
             margin-bottom: 4%;
@@ -369,14 +389,18 @@
 
     <h1 id="Titulo">Club Malaga Drakkars Esports </h1>
     <div id="contenedor">
-        <p>a) Proporcionar estructura de crecimiento, trabajo en equipo e inclusión para los/las jugadores/as de eSports
-            de Málaga.</p>
-        <p>b) Generar una comunidad donde los/las jugadores/as se relacionen a través de diferentes actividades
-            relacionadas o no con los videojuegos..</p>
-        <p>c) Integración del tejido comercial local en el ámbito tecnológico de entretenimiento dándoles visibilidad y
-            participación en el mismo. </p>
-       
-        <p>d) Generar y promover oportunidades de negocio relacionadas con las nuevas tecnologias en Málaga</p>
+
+        <p>Proporcionar estructura de crecimiento, trabajo en equipo e inclusión para los/las jugadores/as de eSports
+            de Málaga.
+        
+        <p>
+            Generar una comunidad donde los/las jugadores/as se relacionen a través de diferentes actividades
+            relacionadas o no con los videojuegos..
+        </p>
+        <p>
+        Integración del tejido comercial local en el ámbito tecnológico de entretenimiento dándoles visibilidad y
+        participación en el mismo.</p>
+        <p>Generar y promover oportunidades de negocio relacionadas con las nuevas tecnologias en Málaga</p>
     </div>
 
 
