--- a/Inicio_Club.html
+++ b/Inicio_Club.html
@@ -48,16 +48,22 @@
         }
 
 
-        h1 {
+        .mititulo {
 
             text-align: center;
             font: 350% black;
             font-family: 'Vikings';
             text-decoration: underline rgb(0, 132, 255);
             text-shadow: 10px 10px 10px rgb(255, 255, 255);
-
-
         }
+
+        .misubtitulo {
+            text-align: center;
+            font: 180% black;
+            font-family: 'Vikings';
+           
+        }
+
 
         .flip-box-inner {
             position: relative;
@@ -329,12 +335,6 @@
             color: rgb(255, 255, 255);
         }
 
-        h2 {
-            color: white;
-            font-family: 'Vikings';
-            font-family: Arial, Helvetica, sans-serif;
-
-        }
 
         i {
             color: black;
@@ -387,20 +387,23 @@
 
 
 
-    <h1 id="Titulo">Club Malaga Drakkars Esports </h1>
+    <h1 class="mititulo">Club Malaga Drakkars Esports </h1>
+    <h2 class="misubtitulo">Esto es lo que consideramos la base de nuestro Club FIGG</h2>
     <div id="contenedor">
 
-        <p>Proporcionar estructura de crecimiento, trabajo en equipo e inclusión para los/las jugadores/as de eSports
-            de Málaga.
-        
+        <p>Facilitar la estructura de crecimiento, trabajo en equipo e inclusión para los/las jugadores/as de eSports
+            de Málaga.</p>
+
+        <p>
+            Integración del tejido comercial local en el ámbito tecnológico de entretenimiento dándoles visibilidad y
+            participación en el mismo.</p>
         <p>
             Generar una comunidad donde los/las jugadores/as se relacionen a través de diferentes actividades
             relacionadas o no con los videojuegos..
         </p>
-        <p>
-        Integración del tejido comercial local en el ámbito tecnológico de entretenimiento dándoles visibilidad y
-        participación en el mismo.</p>
         <p>Generar y promover oportunidades de negocio relacionadas con las nuevas tecnologias en Málaga</p>
+
+
     </div>
 
 
