--- a/Inicio_Club.html
+++ b/Inicio_Club.html
@@ -55,15 +55,41 @@
             font-family: 'Vikings';
             text-decoration: underline rgb(0, 132, 255);
             text-shadow: 10px 10px 10px rgb(255, 255, 255);
+
         }
 
-        .misubtitulo {
-            text-align: center;
-            font: 180% black;
-            font-family: 'Vikings';
-           
-        }
+        h2 {
+    text-align: center;
+    margin-top: 100px;
+    text-shadow: 5px 5px 10px rgb(17, 0, 255);
+    font: 250% black;
+    animation-name: logoAnimation;
+    animation-duration: 4s;
+    animation-timing-function: ease-in-out;
+    animation-delay: 1;
+    animation-iteration-count: infinite;
+    animation-direction: normal;
+    animation-fill-mode: forwards;
+    animation-play-state: initial;
 
+}
+@keyframes logoAnimation {
+    0% {
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+
+    20%,
+    80% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+
+    100% {
+        opacity: 0;
+        transform: translateX(100px);
+    }
+}
 
         .flip-box-inner {
             position: relative;
